[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tuner"
version = "0.1.0"
description = "A Fourier-based guitar tuner in Python"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["guitar_tuner*"]